attached_assets/Pasted--NODE-ENV-development-tsx-server-index-ts-5-12-02-PM-ex_1767546745718.txt
> NODE_ENV=development tsx server/index.ts

5:12:02 PM [express] serving on port 5000
[baseline-browser-mapping] The data in this module is over two months old.  To ensure accurate Baseline data, please update: `npm i baseline-browser-mapping@latest -D`
[replit-cartographer] Error processing /home/runner/workspace/client/src/pages/TerminalPage.tsx: SyntaxError: Identifier 'React' has already been declared. (53:7)
    at toParseError (/home/runner/workspace/node_modules/@babel/parser/src/parse-error.ts:95:45)
    at raise (/home/runner/workspace/node_modules/@babel/parser/src/tokenizer/index.ts:1503:19)
    at checkRedeclarationInScope (/home/runner/workspace/node_modules/@babel/parser/src/util/scope.ts:164:19)
    at declareName (/home/runner/workspace/node_modules/@babel/parser/src/util/scope.ts:118:12)
    at declareName (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/scope.ts:89:11)
    at declareNameFromIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:818:16)
    at checkIdentifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:813:12)
    at checkLVal (/home/runner/workspace/node_modules/@babel/parser/src/parser/lval.ts:713:12)
    at finishImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3223:10)
    at parseImportSpecifierLocal (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3210:31)
    at maybeParseDefaultImportSpecifier (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3395:12)
    at parseImportSpecifiersAndAfter (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3157:29)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:3142:17)
    at parseImport (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3011:28)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:642:25)
    at parseStatementContent (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:3185:20)
    at parseStatementLike (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:477:17)
    at parseModuleItem (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:414:17)
    at parseBlockOrModuleBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1438:16)
    at parseBlockBody (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:1412:10)
    at parseProgram (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:229:10)
    at parseTopLevel (/home/runner/workspace/node_modules/@babel/parser/src/parser/statement.ts:203:25)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/parser/index.ts:93:10)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/plugins/typescript/index.ts:4309:20)
    at parse (/home/runner/workspace/node_modules/@babel/parser/src/index.ts:92:38)
    at TransformPluginContext.handler (/home/runner/workspace/node_modules/@replit/vite-plugin-cartographer/dist/index.mjs:74:23)
    at EnvironmentPluginContainer.transform (/home/runner/workspace/node_modules/vite/dist/node/chunks/config.js:30905:51)
    at loadAndTransform (/home/runner/workspace/node_modules/vite/dist/node/chunks/config.js:26043:48) {
  code: 'BABEL_PARSER_SYNTAX_ERROR',
  reasonCode: 'VarRedeclaration',
  loc: Position { line: 53, column: 7, index: 2023 },
  pos: 2023,
  syntaxPlugin: undefined
}
5:12:07 PM [vite] (client) Pre-transform error: /home/runner/workspace/client/src/pages/TerminalPage.tsx: Identifier 'React' has already been declared. (53:7)

  51 | // VERITAS Conversational UI with Multi-Turn Memory and Source Attribution
  52 |
> 53 | import React, { useState, useEffect, useRef } from "react";
     |        ^
  54 | import axios from "axios";
  55 |
  56 | export default function TerminalPage() {
  Plugin: vite:react-babel
  File: /home/runner/workspace/client/src/pages/TerminalPage.tsx:53:7
  51 |  // VERITAS Conversational UI with Multi-Turn Memory and Source Attribution
  52 |  
  53 |  import React, { useState, useEffect, useRef } from "react";
     |         ^
  54 |  import axios from "axios";
  55 |  
